[project]
name = "rediscache-cachetools"
version = "0.1.1"
description = "An extension of python cachetools for redis cache."
authors = [
    { name = "xy.kong", email = "xy.kong@gmail.com" },
]
readme = "README.md"
package-mode = false


[project.urls]
repository = "https://github.com/xykong/rediscache-cachetools"
documentation = "https://github.com/xykong/rediscache-cachetools"
issues = "https://github.com/xykong/rediscache-cachetools/issues"
package = "https://pypi.org/project/rediscache-cachetools"


[tool.poetry.dependencies]
python = "^3.11"
cachetools = "^5.5.0"
redis = "^5.2.0"
python-redis-cache = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.versions]
branch = "master"
commit = "85ba4a9"
commit_count = 4
is_dirty = true
datetime = "2024-12-01 01:26:17"
version = "0.1.0"


[tool.versions.settings]
allow_dirty = false
commit = true
commit_on = ["major", "minor"]
commit_message = "Bump version: {current_version} → {new_version}"
filename = [
    "redis_cachetools/__init__.py",
]
