[project]
name = "rediscache-cachetools"
description = "An extension of python cachetools for redis cache."
dynamic = ["version"]
authors = [
    { name = "xy.kong", email = "xy.kong@gmail.com" }
]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "cachetools>=5.0.0",
    "redis>=5.0.0",
    "python-redis-cache>=4.0.0",
]
package-mode = false

[project.urls]
repository = "https://github.com/xykong/rediscache-cachetools"
documentation = "https://github.com/xykong/rediscache-cachetools"
issues = "https://github.com/xykong/rediscache-cachetools/issues"
package = "https://pypi.org/project/rediscache-cachetools"

[dependency-groups]
dev = ["pytest>=8.0.0", "hatchling>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "rediscache_cachetools/__init__.py"

[tool.versions]
branch = "master"
commit = "85ba4a9"
commit_count = 4
is_dirty = true
datetime = "2024-12-01 01:26:17"
version = "0.1.0"

[tool.versions.settings]
allow_dirty = false
commit = true
commit_on = ["major", "minor"]
commit_message = "Bump version: {current_version} → {new_version}"
filename = [
    "redis_cachetools/__init__.py",
]
